--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,9 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+
 jspm_packages/
-node_modules/
+ node_modules/*
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
