--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
+    "console": "^0.7.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
